fix search box alignment

--- a/public/css/header.css
+++ b/public/css/header.css
@@ -91,7 +91,6 @@ header {
 .buttons {
     display: flex;
     align-items: center;
-    padding-top:20px
 }
 
 .cart-login{
